# Mr-Steel-Rat-Bot

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Docker-compose.yaml  Dockerfile  README.md  build_ninja.sh  build_njproc.sh
module/: BaseCommandBot.cpp  BaseCommandBot.h  CMakeLists.txt  DataBase.cpp  DataBase.h  links_user_data.h  token.h
src/: CMakeLists.txt  main.cpp
